--- a/templates/saberkan-ruby-dc.yaml
+++ b/templates/saberkan-ruby-dc.yaml
@@ -57,6 +57,6 @@ spec:
       from:
         kind: ImageStreamTag
         name: ruby:latest
-        namespace: saberkan-test
+        namespace: openshift
     type: ImageChange
   - type: ConfigChange
